--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ matrix:
       python: 3.7
 
 
+env:
+    - DROPBOX_ACCESS_TOKEN=Ozdb24UtqKAAAAAAAAAAC5-zHhrmCXEmdFWu9Dmj0PJrvWn-FCG23zLpt5k6OiGu
 
 
 install:
