--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ install:
   - pip install .
 
 script:
-  - pytest --reruns 5  dropboxfs/tests/test_dropboxfs.py
+  - pytest -v --reruns 5  dropboxfs/tests/test_dropboxfs.py 
 
 after_success:
   - coveralls
