--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,9 @@ matrix:
     - os: linux
       dist: trusty
       python: pypy
+    - os: linux
+      dist: trusty
+      python: pypy35
 
 
 env:
